# NYX

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  verify.sh
benches/: benchmarks.rs
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/gc/: Cargo.toml
crates/gc/src/: lib.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/type-system/: Cargo.toml
crates/type-system/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: lib.rs
docs/: LANGUAGE_REFERENCE.md
examples/: arithmetic.nyx  collections.nyx  control_flow.nyx  functions.nyx  generics.nyx
tests/: lexer_tests.rs  parser_tests.rs  type_checker_tests.rs  vm_tests.rs
